static/css/commentIcon.css
#commentIcons {
  display: block;
  z-index: 1;
  margin-left: 760px;
  padding-left: 25px;
}

/* when line numbers are not visible, we need to move icons to the left */
#sidediv.sidedivhidden ~ #commentIcons {
  padding-left: 20px;
}

/* when page view is disabled, we need to move icons to the left */
#outerdocbody.pageViewDisabled #commentIcons {
  margin-left: calc(100% - 90px);
}

/* this is the point where #comments will be visible (check media queries on comment.css) */
@media (min-width: 955px) {
  #outerdocbody.pageViewDisabled #commentIcons {
    margin-left: calc(100% - 290px);
  }
}

.comment-icon-line {
  position: absolute;
}

.comment-icon {
  display: inline-block;
  margin-right: 5px;
  fill: #808286; /* Color 130 */
  cursor: pointer;
}
.comment-icon:hover {
  fill: #515256; /* Color 80 */
}
.comment-icon.active {
  fill: #19BBDA; /* Color A */
}

/* show the single-comment icon by default */
.comment-icon #withReply,
.comment-icon.withReply #single {
  display: none;
}
.comment-icon.withReply #withReply,
.comment-icon #single {
  display: inline-block;
}

